--- a/.github/workflows/dora-metrics.yml
+++ b/.github/workflows/dora-metrics.yml
@@ -33,14 +33,14 @@ jobs:
         run: |
           python dora_pipeline.py
 
-      # - name: Commit and push updated SQLite DB
-      #   run: |
-      #     git config --global user.name "github-actions[bot]"
-      #     git config --global user.email "github-actions[bot]@users.noreply.github.com"
-      #     git add mobile_metrics.json
-      #     git add mobile_metrics.db
-      #     git commit -m "Update DORA metrics DB [skip ci]" || echo "No changes to commit"
-      #     git push
+      - name: Commit and push updated SQLite DB
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add mobile_metrics.json
+          git add mobile_metrics.db
+          git commit -m "Update DORA metrics DB [skip ci]" || echo "No changes to commit"
+          git push
 
   build-and-deploy:
     runs-on: ubuntu-latest
